<resources>
    <string name="app_name">Train IT!</string>
    <string name="change_lang">Change Language</string>
    <string name="choose_tv">Choose the type!</string>
    <string name="type_1">Conditional</string>
    <string name="type_2">Cycles</string>
    <string name="type_3">Massives</string>
    <string name="type_4">Strings</string>
    <string name="hello">Hello.</string>
    <string name="create_start">Lets get started!</string>
    <string name="login_welcome">Welcome back.</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">E-mail address</string>
    <string name="create_account_to_login">Already have an account?</string>
    <string name="login">Log in</string>
    <string name="login_to_create_account">Do not have an account?</string>
    <string name="logout">Log out</string>
    <string name="about_us">About us</string>
    <string name="profile">Profile</string>
    <string name="change_pfp_icon">Change profile picture</string>
    <string name="save_btn">Save</string>
    <string name="return_str">Return</string>
    <string name="quiz_tv">Quizes</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>