<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_gradient"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/sign_up_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/signup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/greeting_layout_2"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintWidth_percent="0.45" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/greeting_layout_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/sign_up_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/form_layout"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/greeting_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/hello_txt"
            app:layout_constraintBottom_toTopOf="@id/letsgo_iv"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintHeight_percent="0.5"
            android:background="@drawable/greeting" />

        <TextView
            android:id="@+id/hello_txt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/orbitron"
            android:text="@string/hello"
            android:textColor="@color/orange_main"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/letsgo_txt"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintLeft_toRightOf="@id/greeting_iv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9" />

        <ImageView
            android:id="@+id/letsgo_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toBottomOf="@id/greeting_iv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/letsgo_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/letsgo" />
        <TextView
            android:id="@+id/letsgo_txt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toBottomOf="@id/hello_txt"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/letsgo_iv"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:text="@string/create_start"
            android:fontFamily="@font/orbitron"
            android:textColor="@color/orange_main"
            android:textSize="20sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/greeting_layout_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_2">

        <EditText
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="5dp"
            android:id="@+id/email_edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_edit_text"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textSize="20sp"
            android:background="@drawable/rounded_corners"
            android:padding="5dp"/>
        <EditText
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintTop_toBottomOf="@id/email_edit_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/confirm_password_edit_text"
            android:id="@+id/password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="20sp"
            android:background="@drawable/rounded_corners"
            android:padding="5dp"
            />

        <EditText
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/create_account_btn"
            android:id="@+id/confirm_password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:textSize="20sp"
            android:background="@drawable/rounded_corners"
            android:padding="5dp"
            />

        <Button
            android:layout_width="0dp"
            android:id="@+id/create_account_btn"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_edit_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/sign_up"
            android:background="@drawable/main_buttons"
            android:textColor="@color/orange_main"
            android:textStyle="bold"
            android:fontFamily="@font/orbitron"
            android:textSize="15sp"
            />

        <ProgressBar
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_edit_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:visibility="gone" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintTop_toBottomOf="@id/form_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.5"
            android:textColor="@color/orange_main"
            android:text="@string/create_account_to_login"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.5"
            android:textColor="@color/orange_main"
            android:textStyle="bold"
            android:id="@+id/login_text_view_btn"
            android:text="@string/login"/>

    </LinearLayout>











</androidx.constraintlayout.widget.ConstraintLayout>