<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartButtonActivity"
    android:layout_gravity="center"
    android:background="@drawable/background_gradient">
    <include layout="@layout/toolbar"/>



    <TextView
        android:id="@+id/choose_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/types_buttons_layouts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintHeight_percent="0.05"
        android:text="@string/choose_tv"
        android:textAlignment="center"
        android:fontFamily="@font/orbitron"
        android:textColor="@color/orange_main"
        android:textSize="30sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/types_buttons_layouts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_tv">
        <Button
            android:id="@+id/conditional_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.3"
            android:gravity="center"
            android:background="@drawable/condition"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cycles_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/conditional_txt" />
        <TextView
            android:id="@+id/conditional_txt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.05"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginVertical="10dp"
            android:text="@string/type_1"
            android:fontFamily="@font/orbitron"
            android:textColor="@color/orange_main"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/conditional_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cycles_txt"
            app:layout_constraintBottom_toTopOf="@id/massives_btn"/>

        <Button
            android:id="@+id/cycles_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.3"
            android:background="@drawable/cycle"
            app:layout_constraintLeft_toRightOf="@id/conditional_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cycles_txt"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:id="@+id/cycles_txt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.05"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginVertical="10dp"
            android:text="@string/type_2"
            android:fontFamily="@font/orbitron"
            android:textColor="@color/orange_main"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cycles_btn"
            app:layout_constraintBottom_toTopOf="@id/strings_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/conditional_txt" />
        <Button
            android:id="@+id/massives_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.3"
            android:background="@drawable/array"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/conditional_txt"
            app:layout_constraintBottom_toTopOf="@id/massives_txt"
            app:layout_constraintRight_toLeftOf="@id/strings_btn" />
        <TextView
            android:id="@+id/massives_txt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.05"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginVertical="10dp"
            android:text="@string/type_3"
            android:fontFamily="@font/orbitron"
            android:textColor="@color/orange_main"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/massives_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/strings_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <Button
            android:id="@+id/strings_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.3"
            android:background="@drawable/string"
            app:layout_constraintLeft_toRightOf="@id/massives_btn"
            app:layout_constraintTop_toBottomOf="@id/cycles_txt"
            app:layout_constraintBottom_toTopOf="@id/strings_txt"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="25dp"/>
        <TextView
            android:id="@+id/strings_txt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.05"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginVertical="10dp"
            android:text="@string/type_4"
            android:fontFamily="@font/orbitron"
            android:textColor="@color/orange_main"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/strings_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/massives_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
















</androidx.constraintlayout.widget.ConstraintLayout>